--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,2 @@
 theme: jekyll-theme-cayman
+title: Welcome to the 2017 Quito RADseq workshop, sponsored by QCAZ @ PUCE and the Congreso Latinoamericano de Herpetologia!
