--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Welcome to the 2017 Quito RADseq workshop!
-description: sponsored by QCAZ @ PUCE and the Congreso Latinoamericano de Herpetologia! www.latinherps.ec
+title: Welcome to the 2017 Quito RADseq workshop
+description: sponsored by QCAZ @ PUCE and the Congreso Latinoamericano de Herpetologia www.latinherps.ec
