--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:        Welcome to the 2017 Quito RADseq workshop
 tagline:      sponsored by QCAZ @ PUCE and the Congreso Latinoamericano de Herpetologia <a href="www.latinherps.ec">www.latinherps.ec</a>
-baseurl:      "https://github.com/rdtarvin/RADseq_Quito_2017"
+baseurl:      ""
 paginate:     1
 theme: jekyll-theme-cayman
 
