--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:        2017 Quito RADseq workshop
 tagline:      sponsored by QCAZ @ PUCE and the Congreso Latinoamericano de Herpetologia <a href="www.latinherps.ec">www.latinherps.ec</a>
-baseurl:      ""
+baseurl:      "https://rdtarvin.github.io/RADseq_Quito_2017/"
 paginate:     1
 theme: jekyll-theme-cayman
 
