--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 # Setup
 title:        2017 Quito RADseq workshop
 tagline:      sponsored by QCAZ @ PUCE and the Congreso Latinoamericano de Herpetologia <a href="www.latinherps.ec">www.latinherps.ec</a>
-baseurl:      "https://rdtarvin.github.io/RADseq_Quito_2017/"
+baseurl:      ""
+url:          https://rdtarvin.github.io/RADseq_Quito_2017/
 paginate:     1
 theme: jekyll-theme-cayman
 
@@ -15,3 +16,5 @@ gems:
   - jekyll-paginate
 
 #Others
+site:
+ 
