added under construction to header

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title:        2017 Quito RADseq workshop
-tagline:      sponsored by QCAZ @ PUCE and the Congreso Latinoamericano de Herpetologia <a href="www.latinherps.ec">www.latinherps.ec</a>
+tagline:      UNDER CONSTRUCTION -- sponsored by QCAZ @ PUCE and the Congreso Latinoamericano de Herpetologia <a href="www.latinherps.ec">www.latinherps.ec</a>
 baseurl:      
 url:          https://rdtarvin.github.io/RADseq_Quito_2017
 paginate:     1
