trying to fix tagline

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title:        2017 Quito RADseq workshop
-tagline:      "UNDER CONSTRUCTION -- sponsored by QCAZ @ PUCE and the Congreso Latinoamericano de Herpetologia" 
+tagline:       
 baseurl:      
 url:          https://rdtarvin.github.io/RADseq_Quito_2017
 paginate:     1
